kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyek-3
  labels:
    app: order-service
