kubernetes/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  labels:
    app: shipping-service
spec:
  ports:
  - port: 3001
    protocol: TCP 
  selector:
    app: shipping-service
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  labels:
    app: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
      - name: shipping-service
        image: ghcr.io/gunzxx/shipping-service:v1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3001
